--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "jquery": "^3.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
