--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/meichangliang/webpack_learn#readme",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "csv-loader": "^3.0.2",
     "file-loader": "^2.0.0",
     "jquery": "^3.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.11"
