--- a/output_anagement/package.json
+++ b/output_anagement/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/meichangliang/webpack_learn#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "csv-loader": "^3.0.2",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
