--- a/output_anagement/package.json
+++ b/output_anagement/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "dev": "webpack-dev-server --open",
     "build": "webpack"
   },
   "repository": {
@@ -28,6 +30,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
