--- a/output_anagement/package.json
+++ b/output_anagement/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
+    "build": "webpack",
     "dev": "webpack-dev-server --open",
-    "build": "webpack"
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,14 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "csv-loader": "^3.0.2",
+    "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.9",
     "xml-loader": "^1.2.1"
   },
